2012-09-21  Peter Beverloo  <peter@chromium.org>

        [Chromium] Switch back to a fixed fifo path for Android
        https://bugs.webkit.org/show_bug.cgi?id=97230

        Reviewed by Tony Chang.

        Because not all external storage cards will be formated using a file
        system that supports named pipes, Chromium has been changed to creating
        the pipes in a temporary folder on the internal storage. Adapt this in
        WebKit so we can continue to run layout tests.

        This also includes an *unreviewed* fix for a breakage in the webkitpy
        tests I made in r129221. Two lines and related to this code, so I decided
        to include it in this change.

        * Scripts/webkitpy/layout_tests/port/chromium_android.py:
        (ChromiumAndroidDriver.__init__):
        (ChromiumAndroidDriver._setup_test):
        (ChromiumAndroidDriver._update_version):

2012-09-20  Peter Beverloo  <peter@chromium.org>

        Leverage Chromium's code to set up FIFOs for Chromium Android layout tests
        https://bugs.webkit.org/show_bug.cgi?id=97227

        Reviewed by Tony Chang.

        We switched Chromium to using FIFOs in order to achieve better consistency,
        which was done by Marcus in r157541. Remove all custom WebKit code in
        favor of Chromium's implementation.

        Remove more FIFO code in the test runner itself, including the code in
        DumpRenderTree that invoked it. We can now switch to Chromium's brand
        new FIFO-creating code, which is being set-up for all test targets build
        for Android, including DumpRenderTree, TestWebKitAPI and webkit_unit_tests.

        This also changes the ChromiumAndroidDriver._remove_all_pipes method to
        delete the files individually. "rm" would fail if one of the earlier files
        does not exist, and the "-f" argument doesn't seem to be reliable.

        * DumpRenderTree/DumpRenderTree.gyp/DumpRenderTree.gyp: